# APIConnect

./: .gitignore  Dockerfile  README.md  pyproject.toml
apiconnect/: main.py  settings.py
apiconnect/api/: endpoints.py  startup_shutdown.py
apiconnect/backend/: general.py
apiconnect/utils/database/: connector.py  orms.py  utils.py
apiconnect/utils/fastapi/: models_incoming.py  response_models.py
