[build-system]
requires = ["setuptools==68.2.2", "wheel==0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "apiconnect"
version = "0.0.1"
authors = [
  { name="Hamza Haleem" },
]
description = "Package containing API development using FastAPI."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "asyncpg == 0.28.0",
  "fastapi == 0.103.2",
  "pydantic == 2.4.2",
  "pydantic-settings == 2.0.3",
  "sqlalchemy == 2.0.22",
  "uvicorn == 0.23.2"
]

[project.optional-dependencies]
dev = []

build = [
  "build == 1.0.3",
  "twine == 4.0.2",
  "wheel == 0.41.2",
  "setuptools == 68.2.2"
]


[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["apiconnect"]
